--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-concat": "~2.3.3",
     "gulp-jsoncombine": "~1.0.0",
     "gulp-less": "~1.3.1",
+    "gulp-nodemon": "~1.0.4",
     "gulp-plumber": "~0.6.4",
     "gulp-sourcemaps": "~1.1.0",
     "jade": "^1.3.1",
@@ -43,6 +44,8 @@
     "passport": "~0.2.0",
     "passport-appdotnet": "^0.1.1",
     "passport-bitly": "^0.1.1",
+    "passport-box": "~0.1.0",
+    "passport-citrix": "^1.0.0",
     "passport-dropbox-oauth2": "~0.1.6",
     "passport-facebook": "^1.0.3",
     "passport-fitbit": "^0.1.2",
@@ -50,8 +53,11 @@
     "passport-github": "git://github.com/jaredhanson/passport-github.git",
     "passport-google-oauth": "^0.1.5",
     "passport-http-oauth": "~0.1.3",
+    "passport-instagram": "~0.1.2",
     "passport-linkedin": "~0.1.3",
+    "passport-linkedin-oauth2": "~1.1.1",
     "passport-local": "^0.1.6",
+    "passport-nest": "~1.0.0",
     "passport-oauth": "~1.0.0",
     "passport-rdio": "^0.1.2",
     "passport-readability": "~0.1.2",
@@ -59,6 +65,7 @@
     "passport-tumblr": "~0.1.2",
     "passport-twitter": "~1.0.2",
     "passport-vimeo": "~0.1.2",
+    "passport-yahoo-oauth": "~0.1.2",
     "q": "^1.0.1",
     "request": "*",
     "rest": "^1.0.3",
@@ -67,13 +74,7 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "*",
     "underscore": "~1.6.0",
-    "when": "^3.0.1",
-    "passport-instagram": "~0.1.2",
-    "passport-yahoo-oauth": "~0.1.2",
-    "passport-box": "~0.1.0",
-    "passport-nest": "~1.0.0",
-    "passport-linkedin-oauth2": "~1.1.1",
-    "gulp-nodemon": "~1.0.4"
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
