--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "passport-twitter": "~1.0.2",
     "passport-vimeo": "~0.1.2",
     "passport-yahoo-oauth": "~0.1.2",
+    "passport-spotify": "~0.1.0",
+    "passport-smartsheet": "~1.0.1",
     "q": "^1.0.1",
     "request": "*",
     "rest": "^1.0.3",
@@ -75,8 +77,7 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "~1.1.0",
     "underscore": "~1.6.0",
-    "when": "^3.0.1",
-    "passport-spotify": "~0.1.0"
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
