--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "passport-twitter": "~1.0.2",
     "passport-vimeo": "~0.1.2",
     "passport-yahoo-oauth": "~0.1.2",
+    "passport-forcedotcom": "~0.1.1",
+    "passport-intuit-oauth": "~0.1.0",
     "q": "^1.0.1",
     "request": "*",
     "rest": "^1.0.3",
