--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "passport-vimeo": "~0.1.2",
     "passport-yahoo-oauth": "~0.1.2",
     "passport-intuit-oauth": "~0.1.0",
+    "passport-xero": "~1.0.0",
     "q": "^1.0.1",
     "request": "*",
     "rest": "^1.0.3",
