--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "skynet": "~1.1.0",
     "underscore": "~1.6.0",
     "when": "^3.0.1",
-    "passport-redbooth": "~1.0.0"
+    "passport-redbooth": "~1.0.0",
+    "passport-podio": "0.0.3"
   },
   "devDependencies": {
     "bower": "^1.3.3",
