--- a/package.json
+++ b/package.json
@@ -74,6 +74,10 @@
     "passport-yahoo-oauth": "~0.1.2",
     "passport-intuit-oauth": "~0.1.0",
     "passport-xero": "~1.0.0",
+    "passport-redbooth": "~1.0.0",
+    "passport-podio": "0.0.3",
+    "passport-wordpress": "0.0.3",
+    "passport-uservoice": "~1.0.2",
     "q": "^1.0.1",
     "request": "*",
     "rest": "^1.0.3",
@@ -82,10 +86,7 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "~1.1.0",
     "underscore": "~1.6.0",
-    "when": "^3.0.1",
-    "passport-redbooth": "~1.0.0",
-    "passport-podio": "0.0.3",
-    "passport-wordpress": "0.0.3"
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
