--- a/package.json
+++ b/package.json
@@ -55,14 +55,19 @@
     "passport-google-oauth": "^0.1.5",
     "passport-http-oauth": "~0.1.3",
     "passport-instagram": "~0.1.2",
+    "passport-intuit-oauth": "~0.1.0",
+    "passport-jawbone": "^0.1.0",
     "passport-linkedin": "~0.1.3",
     "passport-linkedin-oauth2": "~1.1.1",
     "passport-local": "^0.1.6",
     "passport-nest": "~1.0.0",
     "passport-oauth": "~1.0.0",
+    "passport-oauth2": "~1.1.2",
     "passport-paypal": "^0.3.0",
+    "passport-podio": "0.0.3",
     "passport-rdio": "^0.1.2",
     "passport-readability": "~0.1.2",
+    "passport-redbooth": "~1.0.0",
     "passport-sharefile": "^1.0.0",
     "passport-smartsheet": "~1.0.1",
     "passport-spotify": "~0.1.0",
@@ -70,14 +75,11 @@
     "passport-surveymonkey": "^1.1.1",
     "passport-tumblr": "~0.1.2",
     "passport-twitter": "~1.0.2",
-    "passport-vimeo": "~0.1.2",
-    "passport-yahoo-oauth": "~0.1.2",
-    "passport-intuit-oauth": "~0.1.0",
-    "passport-xero": "~1.0.0",
-    "passport-redbooth": "~1.0.0",
-    "passport-podio": "0.0.3",
-    "passport-wordpress": "0.0.3",
     "passport-uservoice": "~1.0.2",
+    "passport-vimeo": "~0.1.2",
+    "passport-wordpress": "0.0.3",
+    "passport-xero": "~1.0.0",
+    "passport-yahoo-oauth": "~0.1.2",
     "q": "^1.0.1",
     "request": "*",
     "rest": "^1.0.3",
@@ -86,8 +88,7 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "1.4.0",
     "underscore": "~1.6.0",
-    "when": "^3.0.1",
-    "passport-oauth2": "~1.1.2"
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
