--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "marked": "*",
     "moment": "2.5.1",
     "mongojs": "^0.15.1",
+    "mongoose": "^3.8.18",
     "morgan": "~1.2.0",
+    "nedb": "~0.11.1",
     "newrelic": "^1.13.0",
     "node-uuid": "*",
     "nodemailer": "^0.6.3",
@@ -86,8 +88,7 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "1.4.0",
     "underscore": "~1.6.0",
-    "when": "^3.0.1",
-    "nedb": "~0.11.1"
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
