--- a/bower.json
+++ b/bower.json
@@ -17,12 +17,11 @@
   "private": true,
   "dependencies": {
     "jquery": "~2.1.1",
-    "angular": "~1.2.21",
-    "angular-animate": "~1.2.21",
-    "angular-sanitize": "~1.2.21",
-    "angular-cookies": "~1.2.21",
-    "angular-resource": "~1.2.21",
-    "angular-mocks": "~1.2.21",
+    "angular": "~1.3",
+    "angular-animate": "~1.3",
+    "angular-sanitize": "~1.3",
+    "angular-cookies": "~1.3",
+    "angular-mocks": "~1.3",
     "jquery-ui": "~1.10.4",
     "angular-ui-router": "~0.2.11",
     "modernizr": "~2.8.2",
@@ -48,12 +47,14 @@
     "mousetrap": "~1.4.6",
     "prism": "gh-pages",
     "xxhash": "*",
-    "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5"
+    "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5",
+    "angular-material": "~0.5.1"
   },
   "resolutions": {
     "d3": "~3.4.8",
     "jquery": "~2.1.1",
-    "jquery-ui": "~1.10.4"
+    "jquery-ui": "~1.10.4",
+    "angular": "1.3.2"
   },
   "devDependencies": {
     "chai": "~1.9.1",
