--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.3.2",
     "cors": "*",
     "coveralls": "^2.7.1",
+    "debug": "^2.1.0",
     "errorhandler": "^1.1.1",
     "express": "~4.6.1",
     "express-session": "~1.6.5",
