--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "angular": "~1.3",
+    "angular-aria": "~1.3",
     "angular-animate": "~1.3",
     "angular-sanitize": "~1.3",
     "angular-cookies": "~1.3",
@@ -48,13 +49,7 @@
     "prism": "gh-pages",
     "xxhash": "*",
     "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5",
-    "angular-material": "~0.5.1"
-  },
-  "resolutions": {
-    "d3": "~3.4.8",
-    "jquery": "~2.1.1",
-    "jquery-ui": "~1.10.4",
-    "angular": "1.3.2"
+    "angular-material": "master"
   },
   "devDependencies": {
     "chai": "~1.9.1",
@@ -88,5 +83,9 @@
     "smoothie": {
       "main": "smoothie.js"
     }
+  },
+  "resolutions": {
+    "d3": "~3.3.13",
+    "angular": "~1.3"
   }
 }
