--- a/bower.json
+++ b/bower.json
@@ -50,7 +50,7 @@
     "prism": "gh-pages",
     "xxhash": "*",
     "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5",
-    "angular-material": "~0.5"
+    "angular-material": "master"
   },
   "devDependencies": {
     "chai": "~1.9.1",
@@ -87,6 +87,7 @@
   },
   "resolutions": {
     "d3": "~3.3.13",
-    "angular": "~1.3"
+    "angular": "~1.3",
+    "angular-material": "master"
   }
 }
