--- a/bower.json
+++ b/bower.json
@@ -87,7 +87,7 @@
   },
   "resolutions": {
     "d3": "~3.3.13",
-    "angular": "~1.3",
+    "angular": "1.3.3",
     "angular-material": "master"
   }
 }
