--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "airbrake": "^0.3.8",
     "async": "*",
-    "bcrypt": "^0.8.0",
+    "bcrypt": "master",
     "body-parser": "~1.5.0",
     "browserify": "^4.2.0",
     "connect-flash": "~0.1.1",
