--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "dependencies": {
     "airbrake": "^0.3.8",
     "async": "*",
-    "bcrypt": "master",
+    "bcrypt": "^0.8.0",
     "body-parser": "~1.5.0",
     "browserify": "^4.2.0",
     "connect-flash": "~0.1.1",
+    "connect-nedb-session": "0.0.3",
     "connect-redis": "^2.0.0",
     "cookie-parser": "~1.3.2",
     "cors": "*",
@@ -82,6 +83,7 @@
     "passport-yahoo-oauth": "~0.1.2",
     "passport-zendesk": "0.0.2",
     "q": "^1.0.1",
+    "redis": "~0.12.1",
     "request": "*",
     "rest": "^1.0.3",
     "safe_datejs": "~0.0.1",
@@ -89,9 +91,7 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "1.7.0",
     "underscore": "~1.6.0",
-    "when": "^3.0.1",
-    "connect-nedb-session": "0.0.3",
-    "redis": "~0.12.1"
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
