--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,7 @@ branches:
     - staging
     - develop
 before_script:
+  - node_modules/.bin/npm rebuild
   - node_modules/.bin/bower install
   - node_modules/.bin/gulp
 after_success:
