--- a/bower.json
+++ b/bower.json
@@ -89,7 +89,6 @@
   },
   "resolutions": {
     "d3": "~3.3.13",
-    "angular": "1.3.3",
-    "angular-material": "master"
+    "angular": "1.3.3"
   }
 }
