--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "passport-xero": "~1.0.0",
     "passport-yahoo-oauth": "~0.1.2",
     "passport-zendesk": "0.0.2",
+    "pretty-camel": "0.0.8",
     "q": "^1.0.1",
     "redis": "~0.12.1",
     "request": "*",
