--- a/bower.json
+++ b/bower.json
@@ -52,7 +52,9 @@
     "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5",
     "angular-material": "master",
     "zeroclipboard": "~2.1.6",
-    "ng-clip": "~0.2.4"
+    "ng-clip": "~0.2.4",
+    "angular-marked": "~0.0.12",
+    "marked": "~0.3.2"
   },
   "devDependencies": {
     "chai": "~1.9.1",
@@ -85,6 +87,9 @@
     },
     "smoothie": {
       "main": "smoothie.js"
+    },
+    "marked": {
+      "main": "lib/marked.js"
     }
   },
   "resolutions": {
