--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,6 @@
     "angular-ui-utils": "~0.1.1",
     "d3": "~3.4.11",
     "jquery-migrate": "~1.2.1",
-    "angular-bootstrap": "~0.11",
     "json-editor": "~0.7.12",
     "elastic.js": "~1.1.1",
     "elasticsearch": "~2.2.0",
@@ -52,7 +51,8 @@
     "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5",
     "angular-material": "master",
     "zeroclipboard": "~2.1.6",
-    "ng-clip": "~0.2.4"
+    "ng-clip": "~0.2.4",
+    "angular-bootstrap": "~0.12.0"
   },
   "devDependencies": {
     "chai": "~1.9.1",
@@ -89,6 +89,6 @@
   },
   "resolutions": {
     "d3": "~3.3.13",
-    "angular": "1.3.4"
+    "angular": "1.3.x"
   }
 }
