--- a/bower.json
+++ b/bower.json
@@ -49,7 +49,7 @@
     "prism": "gh-pages",
     "xxhash": "*",
     "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5",
-    "angular-material": "master",
+    "angular-material": "0.6.1",
     "zeroclipboard": "~2.1.6",
     "ng-clip": "~0.2.4",
     "angular-marked": "~0.0.12",
@@ -94,6 +94,7 @@
   },
   "resolutions": {
     "d3": "~3.3.13",
-    "angular": "=1.3.3"
+    "angular": "=1.3.3",
+    "angular-animate": "=1.3.3"
   }
 }
