--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "passport-rdio": "^0.1.2",
     "passport-readability": "^0.1.2",
     "passport-redbooth": "~1.0.0",
+    "passport-rightsignature": "^0.1.0",
     "passport-sharefile": "^1.0.0",
     "passport-smartsheet": "~1.0.1",
     "passport-spotify": "~0.1.0",
