--- a/bower.json
+++ b/bower.json
@@ -95,6 +95,7 @@
   "resolutions": {
     "d3": "~3.3.13",
     "angular": "=1.3.3",
-    "angular-animate": "=1.3.3"
+    "angular-animate": "=1.3.3",
+    "zeroclipboard": "~2.2.0"
   }
 }
