--- a/package.json
+++ b/package.json
@@ -101,9 +101,12 @@
     "bower": "^1.3.3",
     "casperjs": "~1.1.0-beta3",
     "chai": "^1.9.1",
+    "commander": "~2.3.0",
     "errorhandler": "^1.1.1",
     "karma": "^0.12.19",
     "karma-blink1-reporter": "git://github.com/iamruinous/karma-blink1-reporter",
+    "karma-chai-plugins": "~0.2.3",
+    "karma-coffee-preprocessor": "^0.2.1",
     "karma-growl-reporter": "~0.1.1",
     "karma-mocha": "~0.1.6",
     "karma-ng-html2js-preprocessor": "~0.1.0",
@@ -115,9 +118,7 @@
     "shelljs": "^0.3.0",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0",
-    "webdriverjs": "~1.7.4",
-    "karma-chai-plugins": "~0.2.3",
-    "commander": "~2.3.0"
+    "webdriverjs": "~1.7.4"
   },
   "scripts": {
     "test": "NODE_ENV=test mocha -r test/test_helper.js --recursive --reporter spec test/models test/controllers test/collections && node_modules/karma/bin/karma start --single-run",
