--- a/package.json
+++ b/package.json
@@ -94,13 +94,15 @@
     "should": "^3.3.1",
     "simple-oauth2": "~0.2.0",
     "meshblu": "^1.9.0",
+    "coffee-script": "^1.8.0",
     "underscore": "~1.6.0",
     "when": "^3.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
     "casperjs": "~1.1.0-beta3",
-    "chai": "^1.9.1",
+    "chai": "^1.10.0",
+    "chai-as-promised": "^4.1.1",
     "commander": "~2.3.0",
     "errorhandler": "^1.1.1",
     "karma": "^0.12.19",
@@ -114,14 +116,15 @@
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-sinon-chai": "^0.2.0",
     "karma-spec-reporter": "0.0.13",
+    "mocha": "^2.1.0",
     "selenium-webdriver": "~2.42.1",
     "shelljs": "^0.3.0",
-    "sinon": "^1.10.3",
-    "sinon-chai": "^2.5.0",
+    "sinon": "^1.12.2",
+    "sinon-chai": "^2.6.0",
     "webdriverjs": "~1.7.4"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha -r test/test_helper.js --recursive --reporter spec test/models test/controllers test/collections && node_modules/karma/bin/karma start --single-run",
+    "test": "mocha && node_modules/karma/bin/karma start --single-run",
     "start": "node server.js"
   },
   "engines": {
