--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^0.8.0",
     "body-parser": "~1.5.0",
     "browserify": "^4.2.0",
+    "coffee-script": "^1.8.0",
     "connect-flash": "~0.1.1",
     "connect-nedb-session": "0.0.3",
     "connect-redis": "^2.0.0",
@@ -31,8 +32,10 @@
     "jade": "^1.3.1",
     "lodash": "^2.4.1",
     "lodash-node": "~2.4.1",
+    "mailgun": "^0.5.0",
     "main-bower-files": "^2.0.0",
     "marked": "*",
+    "meshblu": "^1.9.0",
     "moment": "2.5.1",
     "mongojs": "^0.15.1",
     "morgan": "~1.2.0",
@@ -93,8 +96,6 @@
     "safe_datejs": "~0.0.1",
     "should": "^3.3.1",
     "simple-oauth2": "~0.2.0",
-    "meshblu": "^1.9.0",
-    "coffee-script": "^1.8.0",
     "underscore": "~1.6.0",
     "when": "^3.0.1"
   },
