--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "octoblu",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "octoblu.com",
   "main": "server.js",
   "author": "Octoblu Inc.",
   "dependencies": {
     "airbrake": "^0.3.8",
-    "async": "*",
+    "async": "^0.9.0",
     "bcrypt": "^0.8.0",
     "body-parser": "~1.5.0",
     "browserify": "^4.2.0",
@@ -15,9 +15,9 @@
     "connect-nedb-session": "0.0.3",
     "connect-redis": "^2.0.0",
     "cookie-parser": "~1.3.2",
-    "cors": "*",
+    "cors": "^2.5.3",
     "coveralls": "^2.7.1",
-    "debug": "^2.1.0",
+    "debug": "^2.1.1",
     "errorhandler": "^1.1.1",
     "express": "~4.6.1",
     "express-session": "~1.6.5",
@@ -34,14 +34,14 @@
     "lodash-node": "~2.4.1",
     "mailgun": "^0.5.0",
     "main-bower-files": "^2.0.0",
-    "marked": "*",
+    "marked": "^0.3.3",
     "meshblu": "^1.12.0",
     "moment": "2.5.1",
     "mongojs": "^0.15.1",
     "morgan": "~1.2.0",
     "nedb": "~0.11.1",
     "newrelic": "^1.13.0",
-    "node-uuid": "*",
+    "node-uuid": "^1.4.2",
     "nodemailer": "^0.6.3",
     "npm": "~1.4.19",
     "oauth": "~0.9.11",
@@ -91,7 +91,7 @@
     "pretty-camel": "0.0.8",
     "q": "^1.0.1",
     "redis": "~0.12.1",
-    "request": "*",
+    "request": "^2.51.0",
     "rest": "^1.0.3",
     "safe_datejs": "~0.0.1",
     "should": "^3.3.1",
