--- a/bower.json
+++ b/bower.json
@@ -54,7 +54,8 @@
     "ng-clip": "~0.2.4",
     "angular-marked": "~0.0.12",
     "marked": "~0.3.2",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "jquery.sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js"
   },
   "devDependencies": {
     "chai": "~1.9.1",
