--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express-session": "~1.6.5",
     "gulp": "~3.8.6",
     "gulp-bower": "0.0.6",
+    "gulp-clean": "^0.3.1",
+    "gulp-coffee": "^2.2.0",
     "gulp-concat": "~2.3.3",
     "gulp-jsoncombine": "~1.0.0",
     "gulp-less": "~1.3.1",
