--- a/bower.json
+++ b/bower.json
@@ -57,7 +57,8 @@
     "angular-bootstrap": "~0.12.0",
     "jquery.sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
     "eventEmitter": "~4.2.11",
-    "moment": "~2.9.0"
+    "moment": "~2.9.0",
+    "angular-intercom": "~2.0.4"
   },
   "devDependencies": {
     "chai": "~1.9.1",
