--- a/bower.json
+++ b/bower.json
@@ -58,7 +58,8 @@
     "jquery.sparkline": "http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js",
     "eventEmitter": "~4.2.11",
     "moment": "~2.9.0",
-    "angular-intercom": "~2.0.4"
+    "angular-intercom": "~2.0.4",
+    "angular-chartjs-directive": "~0.0.2"
   },
   "devDependencies": {
     "chai": "~1.9.1",
@@ -98,7 +99,7 @@
   },
   "resolutions": {
     "d3": "~3.3.13",
-    "angular": "=1.3.3",
+    "angular": "1.3.x",
     "angular-animate": "=1.3.3",
     "zeroclipboard": "~2.2.0"
   }
