--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "oauth": "~0.9.11",
     "passport": "~0.2.0",
     "passport-appdotnet": "^0.1.1",
+    "passport-automatic": "^1.1.0",
     "passport-bitly": "^0.1.1",
     "passport-box": "~0.1.0",
     "passport-citrix": "^1.0.1",
