--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "nedb": "~0.11.1",
     "newrelic": "^1.13.0",
     "node-uuid": "^1.4.2",
-    "nodemailer": "^0.6.3",
+    "nodemailer": "^1.3.0",
+    "nodemailer-smtp-transport": "^0.1.13",
     "npm": "~1.4.19",
     "oauth": "~0.9.11",
     "passport": "~0.2.0",
