--- a/bower.json
+++ b/bower.json
@@ -59,7 +59,8 @@
     "eventEmitter": "~4.2.11",
     "moment": "~2.9.0",
     "angular-intercom": "~2.0.4",
-    "angular-chart.js": "~0.3.19"
+    "angular-chart.js": "~0.3.19",
+    "angulartics": "~0.17.2"
   },
   "devDependencies": {
     "chai": "~1.9.1",
