--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "passport-spotify": "~0.1.0",
     "passport-stackexchange": "~0.1.0",
     "passport-surveymonkey": "^1.1.1",
+    "passport-thingiverse": "^0.1.3",
     "passport-tumblr": "~0.1.2",
     "passport-twitter": "~1.0.2",
     "passport-uber": "0.0.1",
